Updated docker-compose-core and added gitignore

--- a/docker-compose-core.yaml
+++ b/docker-compose-core.yaml
@@ -146,6 +146,41 @@ services:
     networks:
       - camunda-platform
 
+  mysql:
+    container_name: mysqldb
+    image: mysql:5
+    networks:
+      - camunda-platform
+    hostname: mysql
+    volumes:
+      - ./data/mysql-db:/var/lib/mysql
+      - ./provision:/docker-entrypoint-initdb.d
+    ports:
+      - "3070:3306"
+    environment:
+      MYSQL_ROOT_PASSWORD: root
+      MYSQL_DATABASE: customer_DB
+      MYSQL_USER: dev
+      MYSQL_PASSWORD: dev
+      MYSQL_MAX_CONNECTIONS: 100
+      MYSQL_HOST_PORT: 3306
+
+  phpmyadmin:
+    image: phpmyadmin/phpmyadmin:latest
+    container_name: phpMyAdmin
+    networks:
+      - camunda-platform
+    restart: always
+    links:
+      - mysql
+    ports:
+      - "8183:80"
+    environment:
+      PMA_HOST: mysql
+      PMA_USER: root
+      PMA_PASSWORD: root
+      PMA_ARBITRARY: 1
+
 #Loan application system frontend in VueJS 3
   loan-frontend-app:
     build: 
@@ -192,6 +227,7 @@ services:
     depends_on:
       - zeebe
       - elasticsearch
+      - mysql
     volumes:
       - ./loan-process-application/src:/app/src
     environment:
